Add community portal link.

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
                     <li><a href="hardware.html">Hardware</a></li>
                   </ul>
                 </li>
+                <li><a href="https://community.satnogs.org">Community</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li class="active"><a href="contact.html">Contact</a></li>
               </ul>
@@ -68,6 +69,7 @@
 
       <div class="container main-text">
         <h2 class="featurette-heading">Contact</h2>
+        <p class="lead">Checkout out our forum for all community discussions <a href="https://community.satnogs.org">here.</a></p>
         <p class="lead">SatNOGS uses a mailing list to coordinate all development efforts. <a href="http://lists.satnogs.org/listinfo/dev">Sign up now!</a></p>
         <p class="lead">You may directly contact the SatNOGS team using our email info (at) satnogs.org</p>
         <p class="lead">Or you can go ahead and post suggestions and ideas (even solutions to problems!) via github as <a href="https://github.com/satnogs">issues in our repositories</a>!</p>
