--- a/team.html
+++ b/team.html
@@ -54,6 +54,7 @@
                     <li><a href="hardware.html">Hardware</a></li>
                   </ul>
                 </li>
+                <li><a href="https://community.satnogs.org">Community</a></li>
                 <li class="active"><a href="team.html">Team</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -75,7 +76,7 @@
             <li>Ioannis Charitopoulos <span class="area">(prediction & tracking software, APIs)</span></li>
             <li>Theodore Dimitriou <span class="area">(tracking mechanism design)</span></li>
             <li>Giannis Giannelos <span class="area">(software development for network and db)</span></li>
-            <li>Themistoklis Karafasoulis <span class="area">(antenna construction)</span></li>
+            <li>Eletherios Kosmas <span class="area">(press and public relations)</span></li>
             <li>Dimitrios Papadeas <span class="area">(tripod design and 3D printing)</span></li>
             <li>Pierros Papadeas <span class="area">(documentation, website and hardware design)</span></li>
             <li>Manthos Papamatthaiou <span class="area">(tracking mechanism design and 3D printing)</span></li>
