--- a/documentation.html
+++ b/documentation.html
@@ -54,6 +54,7 @@
                     <li><a href="hardware.html">Hardware</a></li>
                   </ul>
                 </li>
+                <li><a href="https://community.satnogs.org">Community</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
