--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,12 @@
         <p class="lead">Or you can go ahead and post suggestions and ideas (even solutions to problems!) via github as <a href="https://github.com/satnogs">issues in our repositories</a>!</p>
       </div>
 
+      <div class="container main-text">
+        <h2 class="featurette-heading">Press</h2>
+        <p class="lead">Please send any press inquiries at press (at) satnogs.org</p>
+        <p class="lead">You can find our <a href="./logo/SatNOGS-Presskit.zip" target="_blank">Presskit here.</a></p>
+      </div>
+
       <hr class="featurette-divider">
 
       <!-- FOOTER -->
